[package]
name = "scope-local"
version = "0.1.2"
edition = "2024"
description = "Scope local storage"
authors = ["朝倉水希 <asakuramizu111@gmail.com>"]
keywords = ["arceos"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Starry-OS/scope-local"

[dependencies]
log = "0.4"
percpu = { workspace = true }
spin = { version = "0.10", default-features = false, features = ["lazy"] }

[dev-dependencies]
ctor = "0.6"
percpu = { version = "0.2.3-preview.1", features = ["non-zero-vma"] }
